# fast_ray_ap

./: pyproject.toml
fast_ray_ap/: app.py  database.py  security.py  settings.py
fast_ray_ap/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 05c6702027c8_add_um_campo.py  2b95cb517ab5_add_um_campo.py  6290b5baa606_update_default_value_for_updated_at.py  7e4433d29177_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
