[tool.poetry]
name = "fast-ray-ap"
version = "0.1.0"
description = ""
authors = ["RAYELISSON <rayelissonl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev fast_ray_ap/app.py'

pre_test = 'task lint'
test = 'pytest --cov=fast_ray_ap -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
